namespace StateMachine.MVC.Email;

public record Match(string EmailAddress, int StartIndex);